--- a/Algorithmic Problems/Algorithmic Problems Sharp.csproj
+++ b/Algorithmic Problems/Algorithmic Problems Sharp.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
 </Project>
